# Super-Web-App

./: .gitignore  LICENSE  README.md  pyproject.toml  test_notifications.html
.claude/: TABS_IMPLEMENTATION.md  claude.md
app/: application.py  main.py  standalone_webapp.py
app/core/: desktop_integration.py  icon_fetcher.py  notification_manager.py  webapp_manager.py
app/data/: database.py  migrations.py  models.py
app/ui/: add_dialog.py  main_window.py  preferences_dialog.py  system_tray.py  tab_manager.py  tray_helper.py  webapp_window.py
app/utils/: i18n.py  logger.py  validators.py  xdg.py
app/webengine/: notification_bridge.py  popup_handler.py  profile_manager.py  security_manager.py  shared_context.py  webview_manager.py
flatpak/: br.com.infinity.webapps.desktop  br.com.infinity.webapps.metainfo.xml  br.com.infinity.webapps.yml
